This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

20-Apr-2004 (Lars Duening)  (3.3.524)
  - (configure) The MySQL libraries are now also search in
       /usr/local/lib/mysql/lib (can happen on older installations on Mac
       OS-X). Also, when the libraries were found in /usr/local/lib, the
       script still added /usr/local/mysql/lib to the link command.
  - (mudlib/sys/lpctypes.h) Corrected a typo.

18-Apr-2004 (Lars Duening)  (3.3.523)
  - (func_spec, sha1, efuns) New efun sha1() (provided by Fippo -
       thanks!).
  - (func_spec, files.c) Efun write_file() can now be instructed to
        delete the file first (suggested by Pulami).

18-Apr-2004 (Lars Duening)  (3.3.522)
  - (interpret.c) F_RETURN now takes care to undo a pending SAVE_ARG_FRAME.
       This situation can happen in a closure like ({#'sprintf, "%O",
       ({#'return, 1 }) }) (reported by Risky).

18-Apr-2004 (Lars Duening)  (3.3.521)
  - (prolang.y, func_spec, interpret.c) The default return inserted for
       value returning functions (in case the programmer forgets about
       it) now generates a runtime warning so that such code can be found
       and corrected. This applies only for functions with specified return
       type - old type functions don't generate a warning (suggested by
       Heiko).

15-Apr-2004 (Lars Duening)  (3.3.520)
  - (func_spec, array, simulate) Efun unique_array() can now use
       a closure as separator function, and also pass extra arguments
       (suggested by Shinarae).

14-Apr-2004 (Lars Duening)  (3.3.519)
  - (prolang.y) I had to restrict '&(struct->member)' to a single level
       of member lookup because the compiler generated invalid code.

13-Apr-2004 (Lars Duening)  (3.3.518)
  - (sprintf.c) Made the code portable to non-32-bit machines.
  - (test/t-040413) Added a testcase for two struct lookup issues.

13-Apr-2004 (Lars Duening)  (3.3.517)