@@ -168,6 +168,7 @@ Lars Duening thanks:
      David Gibbs (ishara@btinternet.com)
      David 'Greyelk' Gibby (oop_apprentice@yahoo.com)
      Dennis VanHoey (dvanhoe@usol.com)
+     Derek Baron (dbaron_ks@hotmail.com)
      Dominik Zanettin (zhan@opossum.htu.tuwien.ac.at, Zhan@Beutelland)
      Edward S. Marshall (esm@logic.net)
      Enrico Bauermeister (ebauermeister@t-online.de, Enrico@FinalFrontier)
