@@ -63,19 +63,19 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 524)
-(Parent-Version lpmud 3-3 523)
+(Project-Version lpmud 3-3 525)
+(Parent-Version lpmud 3-3 524)
 (Version-Log "
-  - (configure) The MySQL libraries are now also search in
-       /usr/local/lib/mysql/lib (can happen on older installations on Mac
-       OS-X). Also, when the libraries were found in /usr/local/lib, the
-       script still added /usr/local/mysql/lib to the link command.
-  - (mudlib/sys/lpctypes.h) Corrected a typo.
+  - (sha1) The files were still in DOS fileformat, which causes some
+       compilers to choke on the multi-line macro definitions.
+  - (backend.c) Active objects were never cleant up.
+  - (gcollect.c) During object cleanup, mappings with just one reference
+       left are not cleant up, as they will be freed immediately.
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Tue, 20 Apr 2004 21:46:18 -0600")
+(Checkin-Time "Thu, 22 Apr 2004 20:49:47 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -112,8 +112,8 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.74 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.587 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.75 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.588 644))
   (HISTORY (lpmud/f/49_HISTORY 1.347 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -174,7 +174,7 @@
   (src/array.h (lpmud/f/47_array.h 1.18.1.22 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.8 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.32 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.33 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.15 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.3 644))
@@ -196,7 +196,7 @@
   (src/files.c (lpmud/i/50_files.c 1.24 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.15 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.108 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.109 644))
   (src/hash.h (lpmud/f/32_hash.h 1.6 644))
   (src/hash.c (lpmud/c/28_hash.c 1.17 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
@@ -209,7 +209,7 @@
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.52 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.77 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.78 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
   (src/md5.c (lpmud/l/19_md5.c 1.7 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
@@ -294,14 +294,14 @@
   (src/regexp.h (lpmud/35_regexp.h 1.11.1.5 644))
   (src/regexp.c (lpmud/36_regexp.c 1.17.1.4.1.11 644))
   (src/sent.h (lpmud/33_sent.h 1.11.1.4 644))
-  (src/sha1.h (lpmud/t/b/33_sha1.h 1.1 644))
-  (src/sha1.c (lpmud/t/b/34_sha1.c 1.1 644))
+  (src/sha1.h (lpmud/t/b/33_sha1.h 1.2 644))
+  (src/sha1.c (lpmud/t/b/34_sha1.c 1.2 644))
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.4 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.33 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.119 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.87 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.88 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.5 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
