@@ -1,6 +1,13 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+21-Apr-2004 (Lars Duening)  (3.3.525)
+  - (sha1) The files were still in DOS fileformat, which causes some
+       compilers to choke on the multi-line macro definitions.
+  - (backend.c) Active objects were never cleant up.
+  - (gcollect.c) During object cleanup, mappings with just one reference
+       left are not cleant up, as they will be freed immediately.
+
 20-Apr-2004 (Lars Duening)  (3.3.524)
   - (configure) The MySQL libraries are now also search in
        /usr/local/lib/mysql/lib (can happen on older installations on Mac
